# pyoptgra

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  ESA Software Community Licence Weak Copyleft - v2.4  LEGAL  MANIFEST.in  Makefile  README.md  README.rst  api.html  build-requirements.txt  changes-from-fortran.html  example-notebook.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  scaling-and-tolerances.html  search.html  searchindex.js  sensitivity.html  setup.cfg  setup.cfg-backup  setup.py  tox.ini
.github/workflows/: deployment.yaml  workflow.yaml
_sources/: changes-from-fortran.rst.txt  example-notebook.rst.txt  index.rst.txt  scaling-and-tolerances.rst.txt  sensitivity.rst.txt
_static/: documentation_options.js
cmake/modules/: Pybind11.cmake  Update_submodules.cmake
doc/: api.rst  conf.py  index.rst
doc/doxygen/: Doxyfile
doc/sphinx/: Earth_Mars_SEP_Pyoptgra.html  api.rst  changes-from-fortran.rst  conf.py  example-notebook.rst  index.rst  sensitivity.rst
doc/sphinx/_static/: Earth_Mars_SEP_Pyoptgra.html
pyoptgra/: __init__.py  _about.py  khan.py  optgra.py  timeout.py
pyoptgra/core/: __init__.py  bare-test.cpp  bindings.cpp  mul2m.F  mulvs.F  ogcdel.F  ogclos.F  ogcorr.F  ogcpri.F  ogcsca.F  ogcstr.F  ogctyp.F  ogdata.inc  ogderi.F  ogdist.F  ogeval.F  ogexcl.F  ogexec.F  oggsst.F  ogincl.F  oginit.F  ogiter.F  ogleft.F  ogomet.F  ogopti.F  ogplog.F  ogpwri.F  ogpwri_end.F  ogpwri_start.F  ogrigt.F  ogsens.F  ogsopt.F  ogssst.F  ogvsca.F  ogvstr.F  ogvtyp.F  ogwlog.F  ogwmat.F  ogwrit.F  ogwtab.F  (+4 more)
src/: CMakeLists.txt  Makefile  mulvs.F  ogclos.F  ogcont.F  ogcorr.F  ogcpri.F  ogcsca.F  ogcstr.F  ogctyp.F  ogdata.inc  ogderi.F  ogdist.F  ogeval.F  ogexcl.F  ogexec.F  ogincl.F  oginit.F  ogiter.F  ogleft.F  ogomet.F  ogopti.F  ogrigt.F  ogsens.F  ogvsca.F  ogvstr.F  ogvtyp.F  ogwlog.F  ogwmat.F  ogwrit.F  ogwtab.F  pybindwrapper.cpp  wrapper.cpp  wrapper.hpp  wrappertest.cpp
tests/: test.py
tests/cpp/: bare-test.cpp  raiitest.cpp  test-callables.hpp  wrappertest.cpp
tests/python/: test.py
tools/: build-manylinux-wheels.sh  deploy-docs-to-gh-pages.sh
