[project]
authors = [
  {name = "Johannes Schoenmaekers", email = "johannes.schoenmaekers@esa.int"},
  {name = "Moritz von Looz", email = "moritz.von.looz@esa.int"},
]
dependencies = [
  "pygmo >=2.16.0",
  "numpy<2.0.0",
]
description = "A python-wrapped version of OPTGRA, an algorithm for constrained optimization"
license = {text = "GPL-3.0 or ESCL-2.4"}
name = "pyoptgra"
readme = "README.rst"
requires-python = ">=3.9"
version = "1.0.0"

[build-system]
build-backend = "scikit_build_core.build"
requires = ["setuptools", "wheel", "scikit-build-core", "ninja", "setuptools_scm"]

[tool.scikit-build.wheel]
install-dir = "pyoptgra/core"

[tool.setuptools]
packages = ["pyoptgra"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_scheme = "post-release"

[tool.black]
line-length = 100
