[metadata]
name = pyoptgra
description = A python-wrapped optimizer for near-linear constrained problems
long_description = file: README.rst, LEGAL
keywords = optimization, constraints
license = GPL 3 OR ESCL 2.4
home_page = https://github.com/esa/pyoptgra
author = Moritz von Looz
author_email = moritz.von.looz@esa.int


